pvtrong update code

--- a/src/assets/css/common/button.css
+++ b/src/assets/css/common/button.css
@@ -58,7 +58,7 @@
 
 .m-btn-cancel{
     color: #000000;
-    background-color:#BBB;
+    background-color:  #e9ebee;
 }
 
 .m-btn-cancel:hover,.m-btn-cancel:focus {
